# arelle-test-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/actions/test_conformance_suite/: action.yml
.github/workflows/: integration-tests.yml
arelle_test_engine/: __main__.py  test_engine.py  test_engine_options.py
arelle_test_engine/loader/: xml_testcase_loader.py
tests/integration_tests/: integration_test_util.py
tests/integration_tests/validation/: discover_tests.py  run_conformance_suites.py  validation_util.py
tests/integration_tests/validation/conformance_suite_configurations/: edinet.py  nl_inline_2025.py  xbrl_calculations_1_1.py  xbrl_ixbrl_1_1.py  xbrl_link_role_registry_1_0.py
tests/unit_tests/: test_main.py  test_test_engine.py  test_xml_testcase_loader.py
tests/unit_tests/resources/configs/: test_config_all.json  test_config_all.toml  test_config_invalid.json  test_config_override.json
tests/unit_tests/resources/test_suite/: index.xml
