[project]
name = "arelle-test-engine"
version = "0.0.0"
readme = "README.md"
license = "Apache-2.0"
description = "A test engine for Arelle."
authors = [
    {name = "arelle.org", email = "support@arelle.org"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arelle_test_engine*"]

[tool.pytest.ini_options]
pythonpath = ["arelle_test_engine"]
testpaths = ["tests"]

[tool.mypy]
disallow_untyped_defs = true  # Forces you to use type hints
enable_error_code = "ignore-without-code"  # Warn when a # type: ignore comment does not specify any error codes
ignore_missing_imports = true  # Ignores `import-untyped`
python_version = "3.14"
show_error_codes = true
strict = true
warn_return_any = true
warn_unused_configs = true

# --- ignore modules ---
[[tool.mypy.overrides]]
module = [
    'arelle.*',
    'tests.plugin.*',
    'tests.unit_tests.*',
]
ignore_errors = true
